--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,19 @@
 #container {
     display: flex;
-    flex: 1 1 0;
+    flex-grow: 1;
+    flex-shrink: 0;
+    width: 500px;
     flex-wrap: wrap;
+    height: 500px;
+    background-color: crimson;
+    padding: 20px;
+}
+
+.gridElement {
+    height: 20%;
+    width: 20%;
+    display: flex;
+    background-color: burlywood;
+    margin: 2.5%;
 }
 
