Remove margin from grid elements
Realising the functionality doesn't align with having margin
so removed from the style property

--- a/styles.css
+++ b/styles.css
@@ -10,10 +10,9 @@
 }
 
 .gridElement {
-    height: 20%;
-    width: 20%;
+    height: 25%;
+    width: 25%;
     display: flex;
-    background-color: burlywood;
-    margin: 2.5%;
+    background-color: maroon;
 }
 
