--- a/styles.css
+++ b/styles.css
@@ -1,19 +1,27 @@
+html{
+    height: 100%
+}
+
 body {
+    height: 100%;
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0;
 }
 
 #header,
 #footer {
     display: flex;
     flex-direction: row;
-    height: 200px;
+    flex: 1;
+    width: 100%;
 }
 
 #container {
     display: flex;
     flex-direction: row;
-    flex-grow: 1;
     flex-shrink: 0;
     width: 500px;
     flex-wrap: wrap;
