Create header title and apply flex on header

--- a/styles.css
+++ b/styles.css
@@ -19,6 +19,11 @@ body {
     width: 100%;
 }
 
+#header {
+    display: flex;
+    justify-content: space-between;
+}
+
 #container {
     display: flex;
     flex-direction: row;
