--- a/styles.css
+++ b/styles.css
@@ -24,6 +24,10 @@ body {
     justify-content: space-between;
 }
 
+#title {
+    width: 60%
+}
+
 #container {
     display: flex;
     flex-direction: row;
