--- a/styles.css
+++ b/styles.css
@@ -35,10 +35,18 @@ body {
 
 #buttonContainer,
 #counter {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 200px;
     padding: 10px;
     border: 0;
     margin: 0;
+}
+
+button {
+    width: 50%;
+    height: 35%;
 }
 
 #container {
