--- a/styles.css
+++ b/styles.css
@@ -34,7 +34,7 @@ body {
 }
 
 #buttonContainer,
-#counter {
+#colorChange {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -49,7 +49,7 @@ button {
     height: 35%;
 }
 
-#counter {
+#colorChange {
     font-size: 18px;
 }
 
