--- a/styles.css
+++ b/styles.css
@@ -33,8 +33,7 @@ body {
     font-weight: 700;
 }
 
-#buttonContainer,
-#colorChange {
+.buttonContainer {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -49,7 +48,7 @@ button {
     height: 35%;
 }
 
-#colorChange {
+.buttonContainer {
     font-size: 18px;
 }
 
