Add if statement for hover when color mode is on

--- a/styles.css
+++ b/styles.css
@@ -83,3 +83,9 @@ button {
     display: flex;
     background-color: rgb(161, 51, 51);
 }
+
+.overColorElement {
+    height: 100%;
+    width: 25%;
+    display: flex;
+}
