Place counter and grid within a div to center

--- a/styles.css
+++ b/styles.css
@@ -52,6 +52,13 @@ button {
     font-size: 18px;
 }
 
+#main {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
 #container {
     display: flex;
     flex-direction: row;
